# plateau

./: .codecov.yml  .copier-answers.yml  .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  conda-requirements.txt  conda-test-requirements.txt  environment.yml  mypy.ini  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: benchmarks.yml  build.yml  ci-pre-commit.yml  ci.yml  codeql.yml  docs.yml  nighlies.yml  pre-commit-autoupdate.yml  scorecard.yml  update-lockfiles.yml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: config.py  filter.py  index.py  metapartition.py  predicate_pushdown.py  schema.py  write.py
docs/: Makefile  conf.py  environment-docs.yml  index.rst  make.bat  versioning.rst
docs/guide/: dask_indexing.rst  duckdb.rst  examples.rst  getting_started.rst  mutating_datasets.rst  partitioning.rst  pyarrow.rst
docs/spec/: efficient_querying.rst  format_specification.rst  indexing.rst  parallel_dask.rst  serialization.rst  storage_layout.rst  store_interface.rst  type_system.rst
kartothek/core/: dataset.py
kartothek/io/: eager.py  iter.py
kartothek/io/dask/: bag.py  dataframe.py  delayed.py
kartothek/io/testing/: read.py  update.py
kartothek/io_components/: gc.py  metapartition.py  read.py  utils.py  write.py
kartothek/serialization/: _generic.py  _parquet.py
plateau/: __init__.py
plateau/api/: __init__.py  dataset.py  serialization.py
plateau/core/: __init__.py  _compat.py  _deprecation.py  _mixins.py  _time.py  common_metadata.py  dataset.py  docs.py  factory.py  index.py  naming.py  partition.py  testing.py  typing.py  urlencode.py  utils.py  uuid.py
plateau/io/: eager.py  iter.py  polars.py
plateau/io/dask/: _shuffle.py  _sizeof.py  _utils.py  bag.py  compression.py  dataframe.py  delayed.py
plateau/io/duckdb/: __init__.py  dataframe.py  dataframe_fast.py  helper.py
plateau/io/testing/: delete.py  index.py  read.py  update.py  utils.py  write.py
plateau/io_components/: delete.py  gc.py  index.py  metapartition.py  read.py  update.py  utils.py  write.py
plateau/serialization/: __init__.py  _csv.py  _generic.py  _io_buffer.py  _parquet.py  _util.py  testing.py
plateau/utils/: __init__.py  converters.py  pandas.py  store.py
reference-data/arrow-compat/: 10.0.1.parquet  11.0.0.parquet  12.0.0.parquet  13.0.0.parquet  14.0.1.parquet  14.0.2.parquet  15.0.0.parquet  15.0.2.parquet  16.1.0.parquet  17.0.0.parquet  18.1.0.parquet  19.0.0.parquet  19.0.1.parquet  20.0.0.parquet  21.0.0.parquet  23.0.0.parquet  4.0.1.parquet  5.0.0.parquet  6.0.1.parquet  7.0.0.parquet  8.0.1.parquet  9.0.0.parquet  batch_generate_references.sh  generate_reference.py
tests/: conftest.py  test_docs.py  test_imports.py
tests/core/: test_builder.py  test_common_metadata.py  test_dataset_dyn_part.py  test_dataset_explicit_part.py  test_docs.py  test_factory.py  test_index.py  test_msgpack.py  test_partition.py  test_testing.py  test_urlencode.py  test_utils.py
tests/io/dask/: conftest.py
tests/io/dask/bag/: test_index.py  test_read.py  test_write.py
tests/io/dask/dataframe/: test_compression.py  test_hashing.py  test_read.py  test_shuffle.py  test_stats.py  test_update.py
tests/io/dask/delayed/: test_delete.py  test_gc.py  test_read.py  test_update.py  test_write.py
tests/io/duckdb/: helper.py  test_e2e.py  test_helper.py
tests/io/eager/: test_commit.py  test_delete.py  test_gc.py  test_index.py  test_read.py  test_update.py  test_write.py
tests/io/iter/: test_read.py  test_update.py  test_write.py
tests/io/polars/: conftest.py  test_delete.py  test_gc.py  test_index.py  test_read.py  test_update.py  test_write.py
tests/io_components/: test_dataset.py  test_dataset_metadata_factory.py  test_metapartition.py  test_read.py  test_utils.py  test_write.py
tests/serialization/: conftest.py  test_arrow_compat.py  test_classes.py  test_dataframe.py  test_filter.py  test_io_buffer.py  test_parquet.py  test_util.py
tests/utils/: test_converters.py  test_pandas.py  test_store.py
