[metadata]
name = plateau
author = data engineering collective
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    dask[dataframe]!=2021.5.1,!=2021.6.0  # gh475 - 2021.5.1 and 2021.6.0 broke ci, omit those versions
    decorator
    msgpack>=0.5.2
    # Currently dask and numpy==1.16.0 clash
    numpy!=1.15.0,!=1.16.0
    pandas>=0.23.0, !=1.0.0
    pyarrow>=0.17.1,!=1.0.0
    simplejson
    minimalkv>=1.4.2
    toolz
    urlquote>=1.1.3
    zstandard
    attrs
    click
    prompt-toolkit
    pyyaml
python_requires = >=3.8
packages = find:

[tool:pytest]
addopts =
    --strict-markers

filterwarnings =
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore:.*(Generated\sarray\selement).*:FutureWarning:hypothesis.extra.numpy

markers =
    min_metadata_version(version): specify minimum metadata version this test applies to

[aliases]
docs = build_sphinx

[build_sphinx]
builder = doctest,html
source_dir = docs
build_dir = docs/_build
warning-is-error = 1
